Зарефакторил MainController